2016-06-28, 0.6.2:
	Updated dependencies for GHC 8.0.1.

2015-04-03, 0.6.1:
	Fixed build on base < 4.8.

2015-03-28, 0.6.0:
	Updated dependencies for GHC 7.10.

	Fixed library vs. test executable dlist dependency mismatch.

	Renamed Map.toList to toListKV to avoid conflicts with the new Foldable
	class. Also renamed Map.fromList and Map.fromListWith to fromListKV and
	fromListKVWith to match. Thanks to davean for the patch.

	Added Cabal source-repository metadata, pointing to GitHub.

2014-03-20, 0.5.2:
	Updated dependencies, for GHC 7.8 and other new packages.

2013-05-10, 0.5.1:
	Fix cabal build.

	Minor documentation clarification.

	Update binary dependency.

2013-05-09, 0.5:
	Added the 'lookupPrefix' and 'deleteSuffixes' functions, of which especially
	the former was an embarrassing omission:

		lookupPrefix   :: [k] -> trie map k a -> trie map k a
		deleteSuffixes :: [k] -> trie map k a -> trie map k a

	Fixed the documentation headers to refer to 's' instead of 'k' as what we
	use for the length of the given key.

	Fixed documentation of 'deletePrefix': its complexity is O(s), not O(m).

	Some dependency updates.

2012-10-18, 0.4.3:
	Dependency updates for GHC 7.6 and otherwise.

2012-05-23, 0.4.2:
	Dependency updates for GHC 7.4, thanks to Anders Kaseorg.

2011-03-17, 0.4.1:
	Dependency update and Cabalization of the test executable, thanks to JP
	Moresmau.

2010-09-11, 0.4:
	Fixed documentation of the 'deletePrefix' function: if the given key is not
	a prefix of any key, an empty, not unchanged, map/set is returned. Thanks to
	Brian Bloniarz for the bug report.

	Fixed bug in the Patricia version of 'deletePrefix' causing it to not delete
	anything if the prefix to be deleted was a proper prefix of the common
	prefix.

	Changed 'children' to return the map as-is instead of converting it into a
	list first:

		children :: Trie trie st map k => trie map k a -> CMap trie map k a

	Added the 'children1' function as a single-level equivalent of 'children',